1998-03-15  Jochen Wiedmann  <joe@laptop.ispsoft.de> (1.19_11)

	* Makefile.PL: Fixed Bugs in _OdbcParse and version numbers.
	* dbd/dbimon.in: Fixed bugs in export mode (Nem W. Schlecht
	  <nem@abattoir.cc.ndsu.nodak.edu>)

1998-02-26  Jochen Wiedmann  <joe@ispsoft.de> (1.19_10)

	* M(y)sqlPerl now emulated by DBI drivers.
	* dbd/dbdimp.c: Added $dbh->{'info'} and $dbh->{'thread_id'}
 	  (mysql only)
	* dbd/dbimon.in: Fixed minor bug in "rel db test"
	* dbd/dbimon.in (Connect): Added noecho mode for entering
	  passwords.
	* dbd/myMsql.c: Fixed bugs in OdbcParse.

1998-02-06  Jochen Wiedmann  <joe@ispsoft.de> (1.19_03)

	* dbd/dbd.xs.in: Fixed $dbh->quote(undef) to return "NULL"
	  and not 'undef'.
	* Requires DBI 0.93. (I assume it still works with 0.91, but
	  whoever reinstalls Msql-Mysql-modules can well reinstall
	  DBI.)
	* dbd/dbdimp.c: $sth->fetch* now inactivates the sth in case
	  of errors or no more data; this follows the specification of
	  the 'Active' attribute.
	* Added a missing DROP TABLE in ak-dbd.t.
	* Added ODBC style DSN's like DBI:mysql:database=test;host=localhost.

1998-01-20  Jochen Wiedmann  <joe@ispsoft.de> (1.19_02)

	* dbd/dbd.xs.in (quote): Fixed "int len" to "STRLEN len"; the
	  Irix compiler refuses to compile this. (A little bit picky,
	  a warning would really be sufficient here ...) My thanks to
	  Simon Matthews <sam@peritas.com>.
	* Added "LISTINDEX" handling.
	* Makefile.lib: Now always linking against libgcc.a when using gcc
	  and compiling for MySQL.
	* tests/mysql.dbtest: Now using "IS NULL" in SQL queries instead
	  of "= NULL". (Required as of mysql 3.21.22)

1998-01-18  Jochen Wiedmann  <joe@ispsoft.de> (1.19_01)

	* README: Added hint for not using msqlperl mailing lists
	  except for MsqlPerl and MysqlPerl related things.
	* Makefile.lib: Modified version number to contain underscores,
	  so that CPAN considers 1.18xx as the correct version.
	* dbd/dbimon.in: Leaving pager mode worked unreliable; fixed.